--- a/index.html
+++ b/index.html
@@ -61,18 +61,34 @@
                 </div>
             </div>
         </div>
-        <div class="hero-stats">
-            <div class="stat">
-                <h3>20+</h3>
-                <p>Escuelas Participantes</p>
+        
+        <!-- Hero Stats and Logos -->
+        <div class="hero-bottom">
+            <div class="hero-stats">
+                <div class="stat">
+                    <h3>20+</h3>
+                    <p>Escuelas Participantes</p>
+                </div>
+                <div class="stat">
+                    <h3>19</h3>
+                    <p>Integrantes del Equipo</p>
+                </div>
+                <div class="stat">
+                    <h3>7</h3>
+                    <p>Carreras Involucradas</p>
+                </div>
             </div>
-            <div class="stat">
-                <h3>19</h3>
-                <p>Integrantes del Equipo</p>
-            </div>
-            <div class="stat">
-                <h3>7</h3>
-                <p>Carreras Involucradas</p>
+
+            <div class="hero-logos">
+                <div class="logos-container">
+                    <div class="logo-item logo-universidad">
+                        <img src="img/logo-universidad.png" alt="Universidad Nacional del Comahue" class="logo-circular">
+                    </div>
+                    <div class="logo-separator"></div>
+                    <div class="logo-item">
+                        <img src="img/logo-provincia.svg" alt="Provincia de Río Negro" class="logo-rectangular">
+                    </div>
+                </div>
             </div>
         </div>
     </section>
