--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="hero-container">
             <div class="hero-content">
                 <h1 class="hero-title">Semilleros de Ciencia Rionegrina</h1>
-                <p class="hero-subtitle">Fortaleciendo laboratorios escolares y fomentando vocaciones científicas en Río Negro</p>
+                <p class="hero-subtitle">Fomentar vocaciones científicas y fortalecer laboratorios escolares en Río Negro</p>
                 <div class="hero-buttons">
                     <a href="#proyecto" class="btn btn-primary">Conoce el Proyecto</a>
                     <a href="#equipo" class="btn btn-secondary">Nuestro Equipo</a>
@@ -66,7 +66,7 @@
         <div class="hero-bottom">
             <div class="hero-stats">
                 <div class="stat">
-                    <h3>20+</h3>
+                    <h3>30</h3>
                     <p>Escuelas Participantes</p>
                 </div>
                 <div class="stat">
@@ -105,7 +105,7 @@
                 <div class="project-description">
                     <h3>Resumen del Proyecto</h3>
                     <p>La ciencia en Río Negro tiene un valor estratégico y transformador, tanto en lo social como en lo productivo. El contacto con experiencias científicas desde los primeros años de escolaridad puede ser la semilla de curiosidad que permitirá cosechar futuros investigadores, técnicos, médicos y docentes.</p>
-                    <p>Este proyecto busca fortalecer los laboratorios en escuelas primarias para promover el interés por la ciencia. Para ello, equipos extensionistas relevarán necesidades y diseñarán kits científicos para entregar a las escuelas.</p>
+                    <p>Este proyecto busca promover el interés por la ciencia y fortalecer los laboratorios en escuelas primarias. Para ello, equipos extensionistas relevarán necesidades y diseñarán kits científicos para entregar a las escuelas.</p>
                 </div>
                 
                 <div class="project-features">
@@ -122,7 +122,7 @@
                     <div class="feature">
                         <i class="fas fa-users"></i>
                         <h4>Encuentros Presenciales</h4>
-                        <p>Contacto directo entre estudiantes universitarios y alumnos de primaria</p>
+                        <p>Contacto directo entre estudiantes universitarios y de primaria</p>
                     </div>
                     <div class="feature">
                         <i class="fas fa-community"></i>
