--- a/index.html
+++ b/index.html
@@ -29,9 +29,6 @@
                 <li class="nav-item">
                     <a href="#equipo" class="nav-link">Equipo</a>
                 </li>
-                <li class="nav-item">
-                    <a href="#contacto" class="nav-link">Contacto</a>
-                </li>
             </ul>
             <div class="hamburger">
                 <span class="bar"></span>
@@ -215,14 +212,14 @@
                 <div class="footer-section">
                     <h4>Universidad</h4>
                     <ul>
-                        <li>Universidad Nacional del Comahue</li>
                         <li>Centro Regional Universitario Bariloche (CRUB)</li>
-                        <li>San Carlos de Bariloche, Río Negro</li>
+                        <li>Universidad Nacional del Comahue</li>
+                        <li>Quintral 1250, San Carlos de Bariloche, Río Negro</li>
                     </ul>
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2025 Semilleros de Ciencia Rionegrina. Universidad Nacional del Comahue.</p>
+                <p>&copy; 2025 Semilleros de Ciencia Rionegrina - Universidad Nacional del Comahue.</p>
             </div>
         </div>
     </footer>
